plugins {
    id 'java'
}

group = 'fr.ensta'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

dependencies {
    implementation ('fr.ensta:obp3-runtime:1.0.0')
    implementation ('fr.ensta:soup-core:1.0.0')
    implementation ('fr.ensta:obp3-algos:1.0.0')
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

compileJava {
    options.compilerArgs.add('--enable-preview')
}

compileTestJava {
    options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}
